# sgrep

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  benchmark_results.txt  candle_benchmark_results.txt  clippy.toml  paper.tex  pyproject.toml
crates/sgrep-cli/: Cargo.toml
crates/sgrep-cli/src/: main.rs
crates/sgrep/candle/: Cargo.toml
crates/sgrep/candle/examples/: benchmark_candle.rs  inspect_safetensors.rs  quality_test.rs  test_candle.rs
crates/sgrep/candle/src/: lib.rs  model.rs
crates/sgrep/cas/: Cargo.toml
crates/sgrep/cas/src/: lib.rs
crates/sgrep/chunk/: Cargo.toml
crates/sgrep/chunk/src/: lib.rs
crates/sgrep/core/: Cargo.toml
crates/sgrep/core/src/: lib.rs
crates/sgrep/embed/: Cargo.toml
crates/sgrep/embed/benches/: maxsim.rs
crates/sgrep/embed/src/: gpu.rs  lib.rs  maxsim.rs
crates/sgrep/fusion/: Cargo.toml
crates/sgrep/fusion/src/: lib.rs
crates/sgrep/index/: Cargo.toml
crates/sgrep/index/src/: lib.rs
crates/sgrep/inference/: Cargo.toml
crates/sgrep/inference/examples/: benchmark_providers.rs  test_inference.rs
crates/sgrep/inference/src/: lib.rs
scripts/convert/: pyproject.toml
scripts/convert/convert/: __init__.py  __main__.py
