[project]
name = "convert"
version = "0.1.0"
description = "Convert Jina ColBERT models to CoreML format"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "coremltools>=8.0",
    "numpy>=1.26",
    "einops>=0.7",  # Required for jina-colbert-v2
]

[project.scripts]
convert = "convert:main"
