[package]
name = "sgrep-candle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Candle-based ColBERT inference with Metal GPU acceleration"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[dependencies]
sgrep-core.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
hf-hub.workspace = true

[dev-dependencies]
color-eyre.workspace = true
tracing-subscriber.workspace = true
sgrep-embed.workspace = true

[lints]
workspace = true
