[package]
name = "sgrep-cas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-addressable storage with blake3 hashing"

[dependencies]
sgrep-core.workspace = true
eyre.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
