[package]
name = "sgrep-fusion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rank fusion combining BM25 and embedding scores"

[dependencies]
sgrep-core.workspace = true
sgrep-chunk.workspace = true
eyre.workspace = true
tracing.workspace = true

[lints]
workspace = true
